--- a/_units/02.md
+++ b/_units/02.md
@@ -493,6 +493,7 @@ Neuroscience of Music, pp.168-180. Oxford University Press.
 * Zatorre, R.J. and Belin, P. Spectral and temporal processing in human auditory cortex. Cerebral Cortex, Vol. 11, pp. 946-953, 2001
 * Liberman et al. 1991. Afferent and efferent innervation of the cat cochlea: quantitative analysis with light and electron microscopy. Journal of Computational Neurology. http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed& list_uids=2262601&dopt=Citation
 
+{% comment %}
 # Links and Downloads
 
 * Wikipedia article on the ear http://en.wikipedia.org/wiki/Ear
@@ -502,6 +503,6 @@ Neuroscience of Music, pp.168-180. Oxford University Press.
 * H.E.A.R. - a nonprofit hearing information source for musicians and music lovers http:hearnet.com
 * Ear and Hearing Concepts from HyperPhysics http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/hearcon.html Hearing loss simulation: http://www.hei.org/education/soundpartners/hearsim-shock.htm
 * Get your own ear plugs: http://www.e-a-r.com
-
+{% endcomment %}
 
 {% include unit_postamble.md %}
