--- a/_units/07.md
+++ b/_units/07.md
@@ -353,6 +353,7 @@ Large & Kohlen. (1994). Connection Science, 6 (1), 177 - 208.
 
 Barlow (2012). On Musiquantics http://clarlow.org/wp-content/uploads/2016/10/On-MusiquanticsA4.pdf
 
+{% comment %}
 ## Links and Downloads
 
 AccelerandoExplorer <!-- we used to have a Max patch for this Accelerando Explorer; does either of you still have it? PL -->
@@ -362,6 +363,6 @@ Doug Eck's java simulator of oscillators - provides explanations of coupled osci
 Java applet demo of coupled oscillators: http://www.lon-capa.org/~mmp/applist/coupled/osc2.htm
 
 Peter Desain's Music, Mind, and Machine Group offers several downloadable demos on expressive timing and the Bayesian model of rhythm. http://www.nici.kun.nl/mmm/
-
+{% endcomment %}
 
 {% include unit_postamble.md %}
