--- a/_units/08.md
+++ b/_units/08.md
@@ -281,6 +281,7 @@ This texture space may be used to predict different musical styles. Different ge
 - von Hippel, P. & Huron, D. Melodic gap-fill and regression to the mean.American Musicological Society, Northern/Central California Chapter Meeting.
 Oakland, California (1998 Feb. 7)
 
+{% comment %}
 # Links and Downloads
 
 - Diana Deutsch's CD Musical Illusions and Paradoxes.http://philomel.com
@@ -288,5 +289,6 @@ Oakland, California (1998 Feb. 7)
 - More on Gestalt processes of pattern perception: http://www.usask.ca/education/coursework/skaalid/theory/gestalt/gestalt.htm
 - Huron Tone and Voice: a Derivation of Rules of Voice-Leading. http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html
 - Russo & Cuddy (1999) on melodic expectancy, with sound examples: http://www.acoustics.org/press/137th/russo.html
+{% endcomment %}
 
 {% include unit_postamble.md %}
