--- a/_units/04.md
+++ b/_units/04.md
@@ -283,7 +283,8 @@ when they are in the bass register. This also confirms what many musicians
 already know, which is that intervals that are normally considered consonant
 like thirds, can sound rough and dissonant (muddy) in the low register.
 
-{% include img-figure url="/MUTOR/assets/images/MUTOR_CriticalBand.png" description="" %}
+{% include mov-figure src="/MUTOR/assets/videos/unit4_criticalband.mp4" type="mp4" description="Maxpatch example: critical band." width="600px" %}
+_you can have access to all MUTOR interacive maxpatches when you download the [MUTOR github repository](https://github.com/MUTOR-2/MUTOR) inside the maxpatches folder._
 
 # Complex Tones
 
