Replace 2.34, 2.35 earmuffs.png, earplugs.jpg
Licensed versions

--- a/_units/02.md
+++ b/_units/02.md
@@ -455,7 +455,7 @@ When in quiet environments, we may occasionally hear a ringing in the ears. This
 1. Avoid loud sounds.
 1. Use protection for your ears.
 
-{% include img-figure url="/MUTOR/assets/images/earmuffs.jpg" description="Ear Muffs" width="200px" %}
+{% include img-figure url="/MUTOR/assets/images/earmuffs.png" description="Ear Muffs" width="200px" %}
 {% include img-figure url="/MUTOR/assets/images/earplugs.jpg" description="Ear Plugs" width="200px" %}
 
 A rock concert generally produces sounds at around 100dB. While this is an extremely loud baseline of sound level, rock concerts tend to have relatively little dynamic variation. Sounds of 120dB or more are perceived as painfully loud.
