Replace 2.36 protection_attenuation.png

--- a/_units/02.md
+++ b/_units/02.md
@@ -468,7 +468,7 @@ If you are continually exposed to sounds above 85dB, you should wear protective 
 
 For more powerful hearing protection, especially from sudden sounds such as gunshots, one can purchase over-the-ear muffs, which provide up to 40dB of sound attenuation. To ensure maximal hearing protection, the best strategy is to combine the uses of earplugs and ear muffs, as their added contribution to sound attenuation is more effective than their individual contributions.
 
-{% include img-figure url="/MUTOR/assets/images/protection_attenuation.gif" description="Protection Attenuation" width="500px" %}
+{% include img-figure url="/MUTOR/assets/images/protection_attenuation.png" description="Protection Attenuation" width="500px" %}
 Various types of hearing protection and their noise reduction rates, as a function of frequency. {% comment %} (image source: Rossing, Moore & Wheeler, 2001) {% endcomment %}
 
 # Summary
