--- a/_units/02.md
+++ b/_units/02.md
@@ -104,7 +104,7 @@ The cochlea, often referred to as the "hearing organ", is most important to the 
 The cochlea is a coiled, fluid-filled tubular structure. It is lined with membranes which divide the inside of the cochlea into fluid-filled compartments.
 
 {% include img-figure url="/MUTOR/assets/images/cochlea_dissected.png" description="Cochlea Dissected" width="400px" %}
-{% comment %} (image source: http://www.iurc.montp.inserm.fr/cric/audition/english /cochlea/fcochlea.htm) {% endcomment%}
+{% comment %} (image by Mireille Lavigne Rebillard, from http://www.cochlea.eu/en/ear/inner-ear EDU website "Journey into the World of Hearing", by Rémy Pujol et al., NeurOreille, Montpellier) {% endcomment%}
 
 A dissected cochlea of a human fetus.
 
@@ -131,7 +131,7 @@ When the cochlea is excited by sound coming in, vibrations are sent through the 
 In its resting state, the basilar and tectorial membranes are parallel, the stereocilia (tiny hairs on the surface of the inner and outer hair cells) are relaxed and close together, and the ion channels between the stereocilia are closed. When sound excites the cochlea, its vibrations are sent down the fluid of the cochlea so that the basilar membrane is deflected. When the basilar membrane moves, the inner hair cells in the basilar membrane change shape, and the stereocilia on the inner hair cells are stretched, thus opening up the ion channels in the inner hair cells and causing a chemical transduction to occur within the cells. The chemical transduction of the inner hair cells results in the generation of the nerve impulse, which passes down the nerve fibers of the auditory nerve as neural firings. Thus the Organ of Corti is responsible for transducing sound signals into biological nerve impulses, so that hearing can occur.
 
 {% include img-figure url="/MUTOR/assets/images/ihc_mvnt.png" description="Inner Hair Cells" %}
-{% comment %} Close-up of inner hair cells with stereocilia, which open when excited by incoming sound. {% endcomment%}
+{% comment %} Close-up of inner hair cells with stereocilia, which open when excited by incoming sound. (image source: https://wellcomecollection.org/works/jfsbzy4g){% endcomment%}
 
 {% include img-figure url="/MUTOR/assets/images/ihc_ohc.png" description="Inner and Outer Hair Cells" width="400px" %}
 {% comment %} Electron microscropy showing one row of inner hair cells and three rows of outer hair cells. {% endcomment%}
@@ -149,10 +149,10 @@ The cochlea is a coiled structure, contains the entire length of the basilar mem
 {% comment %} ALSO, IT IS LOOKING HORRIBLE! {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/images/tonotopy.png" description="Tonotopy Basilar Membrane" width="400px" %}
-{% comment %} (image source: Watts, 1993) Schematic of the rolled-up basilar membrane, with its optimally sensitive frequencies marked along its length. {% endcomment %}
+{% comment %} (Adapted from Watts, 1993) Schematic of the rolled-up basilar membrane, with its optimally sensitive frequencies marked along its length. {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/images/bekesy.png" description="Data on Tonotopy from von Békésy " width="auto" height="500px" %}
-{% comment %} (image source: http://www.pbrc.hawaii.edu/bekesy/ taken from Nobel Lectures Physiology or Medicine 1942 - 1962, Elsevier, 1964, pp. 722-746) {% endcomment %}
+{% comment %} (Adapted from image: http://www.pbrc.hawaii.edu/bekesy/ taken from Nobel Lectures Physiology or Medicine 1942 - 1962, Elsevier, 1964, pp. 722-746) {% endcomment %}
 
 The observation of tonotopic mapping on the basilar membrane was first made by Georg von Békésy, who won a Nobel Prize in 1961 for this discovery. This is a diagram from von Békésy's Nobel lecture, showing that higher frequencies (in cps, or cycles per second) excited the end of the basilar membrane which was closest to the stapes (stirrup). The point of optimal excitation moved further away from the stapes as the stimulus frequency decreased.
 
@@ -469,7 +469,7 @@ If you are continually exposed to sounds above 85dB, you should wear protective 
 For more powerful hearing protection, especially from sudden sounds such as gunshots, one can purchase over-the-ear muffs, which provide up to 40dB of sound attenuation. To ensure maximal hearing protection, the best strategy is to combine the uses of earplugs and ear muffs, as their added contribution to sound attenuation is more effective than their individual contributions.
 
 {% include img-figure url="/MUTOR/assets/images/protection_attenuation.png" description="Protection Attenuation" width="500px" %}
-Various types of hearing protection and their noise reduction rates, as a function of frequency. {% comment %} (image source: Rossing, Moore & Wheeler, 2001) {% endcomment %}
+Various types of hearing protection and their noise reduction rates, as a function of frequency. {% comment %} (Adapted from image: Rossing, Moore & Wheeler, 2001) {% endcomment %}
 
 # Summary
 
