--- a/_units/03.md
+++ b/_units/03.md
@@ -76,7 +76,7 @@ Threshold-finding models addressing this question have given way to the use of S
 
 Simple signal detection theory assumes two Gaussian distributions of signal trials and noise trials respectively. Given some amount of evidence of the signal, plotted on the x axis (or "internal response" as shown in the graph), the observer must decide on the probability that the evidence points to a signal trial or a noise trial. The observer then adopts a criterion (shown as the thick line labeld "criterion response"). Any trial for which the internal response exceeds the criterion is categorized as "signal", and any trial for which the internal response is below criterion is categorized as "noise".
 
-{% include img-figure url="/MUTOR/assets/images/unit3_sdt1.gif" description="Signal Detection Theory illustration" width="300px" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_sdt1.png" description="Signal Detection Theory illustration" width="300px" %}
 
 The following are true given the above situation:
 "hits" are trials that fall under the signal distribution and are correctly labled "signal";
@@ -88,16 +88,16 @@ d' = z(hit) - z(false alarm),
 where z is the deviation of the criterion from the mean, given in standard units (z-scores).
 Since d' is a measurement of how far apart the two distributions are, a higher d' means that signal trials and noise trials are very clearly separated; thus, higher d' signifies better performance.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_sdt2.gif" description="SDT Criterion" width="300px" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_sdt2.png" description="SDT Criterion" width="300px" %}
 
 
-(image source: http://www.cns.nyu.edu/~david/sdt/sdt.html)
+(Adapted from image: http://www.cns.nyu.edu/~david/sdt/sdt.html)
 
 Criterion adoption (i.e. how liberal you are at labelling a trial as "signal") does not affect sensitivity as measured by d'.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_sdt3.gif" description="d prime illustration" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_sdt3.png" description="d prime illustration" width="400px" %}
 
-(image source: http://www.cns.nyu.edu/~david/sdt/sdt.html)
+(Adapted from image: http://www.cns.nyu.edu/~david/sdt/sdt.html)
 
 d' scores - the higher the d', the more discriminable the two types of trials are; thus, the better the performance.
 
