--- a/_units/03.md
+++ b/_units/03.md
@@ -702,7 +702,7 @@ So far we have discussed the auditory system's processing of sounds and its vari
 Soundtracks in movies offer one case of auditory perception enhancing visual perception. The use of sound effects and soundtracks in the film industry relies heavily on AudioVisualInteraction, and much research has shown that auditory, visual, and tactile sensations influence each other in perceptual as well as cognitive processing. In one particular study by Marilyn Boltz (2001), video clips were paired with positive, neutral, and negative soundtracks and shown to study participants. After viewing the films, participants were asked to rate how well certain adjectives described the content of the video (e.g. "What adjective best describes the man's intentions for following the womann? benevolent / malevolent")
 Participants rated videos with positive soundtracks as being better described by positive adjectives, and videos with negative soundtracks using negative adjectives. Videos with no soundtracks were rated as relatively neutral. This study shows strong effects of musical stimuli on the perception of meaning and emotional content of visual scenes.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_boltz.jpg" description="Boltz soundtrack study" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_boltz.png" description="Boltz soundtrack study" %}
 
 (image source & reference: http://caliber.ucpress.net/doi/pdfplus/10.1525/mp.2001.18.4.427)
 
