added first does phase matter patch

--- a/_units/01.md
+++ b/_units/01.md
@@ -255,8 +255,79 @@ exactly half that of the other, the two cancel each other out and produce
 a flat waveform of 0 amplitude. Try shifting the phase of one sinusoid
 against another in the example below.
 
-{% include img-figure url="/MUTOR/assets/images/MUTOR_DoesPhaseMatter1.png" 
+{% comment %}
+{% include img-figure url="/MUTOR/assets/images/MUTOR_DoesPhaseMatter1.png"
 description="Two sinusoids, one with variable phase with respect to the other." %}
+{% endcomment %}
+{% include begin-figure description="Two sinusoids, one with variable phase with respect to the other." %}
+{% include p/begin %}
+{% assign fixedoscillatorname = mutor_patch_pfx | append: "fixedoscillator" %}
+{% assign moveableoscillatorname = mutor_patch_pfx | append: "moveableoscillator" %}
+{% assign transportname = mutor_patch_pfx | append: "transport" %}
+{% assign freqnumberboxname = mutor_patch_pfx | append: "freqnumberbox" %}
+{% assign phasenumberboxname = mutor_patch_pfx | append: "phasenumberbox" %}
+{% assign phaseslidername = mutor_patch_pfx | append: "phaseslider" %}
+{% assign fixedscopename = mutor_patch_pfx | append: "fixedscope" %}
+{% assign moveablescopename = mutor_patch_pfx | append: "moveablescope" %}
+{% assign sumscopename = mutor_patch_pfx | append: "sumscope" %}
+{% assign fixedspectname = mutor_patch_pfx | append: "fixedspect" %}
+{% assign moveablespectname = mutor_patch_pfx | append: "moveablespect" %}
+{% assign sumspectname = mutor_patch_pfx | append: "sumspect" %}
+{% assign fixedmultname = mutor_patch_pfx | append: "fixedmult" %}
+{% assign moveablemultname = mutor_patch_pfx | append: "moveablemult" %}
+
+{% include p/oscillator name=fixedoscillatorname freq="375." type="sine" %}
+{% include p/oscillator name=moveableoscillatorname freq="375." type="sine" %}
+{% include p/multiply name=fixedmultname factor=".5" %}
+{% include p/multiply name=moveablemultname factor=".5" %}
+<table><tr><td style="text-align:left;">
+{% comment %}
+{% include p/number name=freqnumberboxname max="880" def="375" label="frequency in Hz: " %}
+{% endcomment %}
+{% include p/number name=phasenumberboxname def="0" label="phase (0-360): " %}
+{% include p/slider name=phaseslidername min="0" max="360" width="200px" height="20px" %}
+</td></tr><tr><td>
+{% include p/scope name=fixedscopename samps_per_pixel=1 width="290px" %}
+{% include p/spectroscope name=fixedspectname gain="500." width="290px" %}
+</td></tr><tr><td>
+{% include p/scope name=moveablescopename samps_per_pixel=1 width="290px" %}
+{% include p/spectroscope name=moveablespectname gain="500." width="290px" %}
+</td></tr><tr><td>
+{% include p/scope name=sumscopename samps_per_pixel=1 width="290px" %}
+{% include p/spectroscope name=sumspectname gain="500." width="290px" %}
+</td></tr><tr><td>
+{% include p/transport name=transportname %}
+</td></tr></table>
+{% include p/connect outlet=fixedoscillatorname inlet=fixedmultname %}
+{% include p/connect outlet=moveableoscillatorname inlet=moveablemultname %}
+{% include p/connect outlet=fixedmultname inlet=fixedscopename %}
+{% include p/connect outlet=fixedmultname inlet=fixedspectname %}
+{% include p/connect outlet=moveablemultname inlet=moveablescopename %}
+{% include p/connect outlet=moveablemultname inlet=moveablespectname %}
+{% include p/connect outlet=fixedmultname inlet=sumscopename %}
+{% include p/connect outlet=moveablemultname inlet=sumscopename %}
+{% include p/connect outlet=fixedmultname inlet=sumspectname %}
+{% include p/connect outlet=moveablemultname inlet=sumspectname %}
+<script type="text/javascript">
+// {{ freqnumberboxname }}.addEventListener('change', (e)=>{
+// 	{{ fixedoscillatorname }}.frequency.value = parseFloat(e.target.value);
+// });
+{{ phasenumberboxname }}.addEventListener('change', (e)=>{
+	const f = parseFloat(e.target.value);
+	{{ moveableoscillatorname }}.phase = f;
+	{{ phaseslidername }}_set(f);
+});
+function phasesliderevent(e)
+{
+	{{ phasenumberboxname }}.value = {{ phaseslidername }}_value.toString();
+	{{ moveableoscillatorname }}.phase = {{ phaseslidername }}_value;
+}
+{{ phaseslidername }}.addEventListener('mousedown', phasesliderevent);
+{{ phaseslidername }}.addEventListener('mousemove', phasesliderevent);
+</script>
+
+{% include p/end %}
+{% include end-figure %}
 {% assign does_phase_matter=fignum %}
 
 You might notice a subtle change in pitch when you move the slider quickly---
