--- a/_units/07.md
+++ b/_units/07.md
@@ -299,6 +299,12 @@ Rotating the final number back to the beginning yields:<br/>
 The following formula by Clarence Barlow formalizes this process (the rotation is applied by the addition of the 1 within the round and square brackets):
 
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p<sub>1</sub> x p<sub>2</sub> x ... x p<sub>z</sub>" %}
+\begin{equation}
+\Psi_z (n) = \sum_{r=0}^{z-1}\left \{ \prod_{i=0}^{z-r-1} p_i \Psi_{p_{z-r}} \left \( 1+\left \( \left \lfloor 1+\frac{(n-2)\mod \prod_{j=1}^{z}p_j}{\prod_{k=0}^{r}p_{z+1-k}} \right \rfloor \mod p_{z-r} \right \) \right \) \right \}
+\label{eq:barlow-indispensibility}
+\end{equation}
+
+
 <br/>
 whereby <br/>
 p<sub>0</sub> = p<sub>z+1</sub> = 1<br/>
@@ -306,7 +312,7 @@ n = position in the bar of the pulse in question, starting at 1<br/>
 p<sub>j</sub> = stratification divisor on level j<br/>
 z = number of levels in the stratification <br/>
 Ψ<sub>p</sub>(x) = indispensability of the xth pulse of a first-order bar with the prime stratification p<br/>
-\[x\] = whole-number component (floor) of x <br/>
+\lfloor x \rfloor = whole-number component (floor) of x <br/>
 
 The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:<br/>
 For r=0: (2 * 3) * Ψ<sub>5</sub>(1 + [1 + (22 mod 30 / 1)] mod 5) = 6 * Ψ<sub>5</sub>(1 + 23 mod 5) = 6 * Ψ<sub>5</sub>(1 + 3) = 6 * 1 = 6 <br/>
