--- a/_units/07.md
+++ b/_units/07.md
@@ -300,7 +300,7 @@ The following formula by Clarence Barlow formalizes this process (the rotation i
 
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p<sub>1</sub> x p<sub>2</sub> x ... x p<sub>z</sub>" %}
 \begin{equation}
-\Psi_z (n) = \sum_{r=0}^{z-1}\left \{ \prod_{i=0}^{z-r-1} p_i \Psi_{p_{z-r}} \left ( 1+\left( \left \lfloor 1+\frac{(n-2)\mod \prod_{j=1}^{z}p_j}{\prod_{k=0}^{r}p_{z+1-k}} \right \rfloor \mod p_{z-r} \right ) \right ) \right \}
+\Psi_z (n) = \sum_{r=0}^{z-1}\left \\\{ \prod_{i=0}^{z-r-1} p_i \Psi_{p_{z-r}} \left ( 1+\left( \left \lfloor 1+\frac{(n-2)\mod \prod_{j=1}^{z}p_j}{\prod_{k=0}^{r}p_{z+1-k}} \right \rfloor \mod p_{z-r} \right ) \right ) \right \\\}
 \label{eq:barlow-indispensibility}
 \end{equation}
 
