Formatting math on 07.md

--- a/_units/07.md
+++ b/_units/07.md
@@ -305,16 +305,24 @@ The following formula by Clarence Barlow formalizes this process (the rotation i
 \end{equation}
 
 
-<br/>
-whereby <br/>
-p<sub>0</sub> = p<sub>z+1</sub> = 1<br/>
-n = position in the bar of the pulse in question, starting at 1<br/>
-p<sub>j</sub> = stratification divisor on level j<br/>
-z = number of levels in the stratification <br/>
-Ψ<sub>p</sub>(x) = indispensability of the xth pulse of a first-order bar with the prime stratification p<br/>
-\[ x \] = whole-number component (floor) of x <br/>
+whereby
 
-The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:<br/>
+\begin{math}
+p_0 = p_{z+1} = 1
+\end{math}
+
+\begin{math} n = \end{math} position in the bar of the pulse in question, starting at 1
+
+\begin{math} p_j = \end{math} stratification divisor on level j
+
+\begin{math} z = \end{math} number of levels in the stratification
+
+\begin{math} \Psi_p (x) = \end{math} indispensability of the xth pulse of a first-order bar with the prime stratification p
+
+\begin{math} \lfloor x \rfloor = \end{math} whole-number component (floor) of x.
+
+The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:
+
 For r=0: (2 * 3) * Ψ<sub>5</sub>(1 + [1 + (22 mod 30 / 1)] mod 5) = 6 * Ψ<sub>5</sub>(1 + 23 mod 5) = 6 * Ψ<sub>5</sub>(1 + 3) = 6 * 1 = 6 <br/>
 For r=1: 2 * Ψ<sub>3</sub>(1 + [1 + (22 mod 30 / 5)] mod 3) = 2 * Ψ<sub>3</sub>(1 + 5.4 mod 3) = 2 * Ψ<sub>3</sub>(1 + 2) = 2 * 1 = 2 <br/>
 For r=2: 1 * Ψ<sub>2</sub>(1 + [1 + (22 mod 30 / 15)] mod 2) = 1 * Ψ<sub>2</sub>(1 + 2.47 mod 2) = 1 * Ψ<sub>2</sub>(1 + 0) = 1 * 1 = 1 <br/>
