Debugging inline math

--- a/_units/07.md
+++ b/_units/07.md
@@ -298,28 +298,25 @@ Rotating the final number back to the beginning yields:<br/>
 <br/>
 The following formula by Clarence Barlow formalizes this process (the rotation is applied by the addition of the 1 within the round and square brackets):
 
-{% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p<sub>1</sub> x p<sub>2</sub> x ... x p<sub>z</sub>" %}
 \begin{equation}
 \Psi_z (n) = \sum_{r=0}^{z-1}\left \\\{ \prod_{i=0}^{z-r-1} p_i \Psi_{p_{z-r}} \left ( 1+\left( \left \lfloor 1+\frac{(n-2)\mod \prod_{j=1}^{z}p_j}{\prod_{k=0}^{r}p_{z+1-k}} \right \rfloor \mod p_{z-r} \right ) \right ) \right \\\}
 \label{eq:barlow-indispensibility}
 \end{equation}
-
+Formula of the indispensability Ψ of the nth pulse of a meter of stratification p<sub>1</sub> x p<sub>2</sub> x ... x p<sub>z</sub>
 
 whereby
 
-\begin{math}
-p_0 = p_{z+1} = 1
-\end{math}
+\( p_0 = p_{z+1} = 1 \)
 
-\begin{math} n = \end{math} position in the bar of the pulse in question, starting at 1
+\( n = \) position in the bar of the pulse in question, starting at 1
 
-\begin{math} p_j = \end{math} stratification divisor on level j
+\( p_j = \) stratification divisor on level j
 
-\begin{math} z = \end{math} number of levels in the stratification
+\( z = \) number of levels in the stratification
 
-\begin{math} \Psi_p (x) = \end{math} indispensability of the xth pulse of a first-order bar with the prime stratification p
+\( \Psi_p (x) = \) indispensability of the xth pulse of a first-order bar with the prime stratification p
 
-\begin{math} \lfloor x \rfloor = \end{math} whole-number component (floor) of x.
+\( \lfloor x \rfloor = \) whole-number component (floor) of x.
 
 The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:
 
