Fix inline math syntax

--- a/_units/07.md
+++ b/_units/07.md
@@ -306,17 +306,17 @@ Formula of the indispensability Ψ of the nth pulse of a meter of stratification
 
 whereby
 
-\\\( p_0 = p_{z+1} = 1 \\\)
+($ p_0 = p_{z+1} = 1 $)
 
-\\\( n = \\\) position in the bar of the pulse in question, starting at 1
+($ n = $) position in the bar of the pulse in question, starting at 1
 
-\\\( p_j = \\\) stratification divisor on level j
+($ p_j = $) stratification divisor on level j
 
-\\\( z = \\\) number of levels in the stratification
+($ z = $) number of levels in the stratification
 
-\\\( \Psi_p (x) = \\\) indispensability of the xth pulse of a first-order bar with the prime stratification p
+($ \Psi_p (x) = $) indispensability of the xth pulse of a first-order bar with the prime stratification p
 
-\\\( \lfloor x \rfloor = \\\) whole-number component (floor) of x.
+($ \lfloor x \rfloor = $) whole-number component (floor) of x.
 
 The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:
 
