uncomment image sources hiding around

--- a/_units/02.md
+++ b/_units/02.md
@@ -66,7 +66,8 @@ A detailed look at each anatomical region of the auditory system must include bo
 "The ear", for our purposes, is not just what sticks out on each side of your head. Although the visible part of the ear, also known as the pinna, constitutes the outer ear and plays an important role in hearing, The ear also includes the middle, and inner ear, each of which has structures specialized for their functions. The middle ear has a series of ossicles, or tiny bones which conduct and amplify the sound signal. The inner ear is of vital importance to hearing as it includes the Cochlea, perhaps the most important structure in the auditory periphery, which transduces sound signals into nerve impulses.
 
 {% include img-figure url="/MUTOR/assets/images/ear_overview.png" description="The Ear" %}
-{% comment %} Overview of the ear, showing the outer, middle, and inner ear. (image source: Rossing et al, 2001) {% endcomment %}
+(Adapted from: Rossing et al, 2001)
+{% comment %} Overview of the ear, showing the outer, middle, and inner ear.  {% endcomment %}
 {% comment %} I think one of this pictures doesn't correspond to the one Pyiche wanted to show. I kept both anyway. {% endcomment%}
 
 The outer ear includes the pinna, the visible portion of the ear coming out of the sides of the head. The pinna directs sound into the ear in a funnel-like manner, and the bony ridges of the pinna play an important role in sound localization. Sound waves approaching from the environment bounce off the bony ridges of the pinna such that the higher frequencies reflect off the bony ridges whereas the lower frequencies bend around the pinna. Using the information of how sounds are reflected along the pinna, localization of different frequencies is possible.
@@ -79,8 +80,9 @@ In addition to the pinna, the outer ear includes the auditory canal and the ear 
 
 The middle ear is a cavity between the tympanic membrane and the oval window of the cochlea. The middle ear consists of middle ear bones and the Eustachean tube.
 
-{% comment %} The middle ear. (image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/ear.html). Was this supposed to be another picture? this one? {% endcomment %}
-{% include img-figure url="/MUTOR/assets/images/middleear.png" description="Middle Ear Ossicles" %}
+{% comment %} The middle ear.. Was this supposed to be another picture? this one? {% endcomment %}
+{% include img-figure url="/MUTOR/assets/images/middleear.png" description="Middle Ear Ossicles" %} 
+(Adapted from: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/ear.html)
 Middle ear bones, or ossicles, include the incus, malleus, and stapes. These ossicles vibrate as they receive sound vibrations from the tympanic membrane. One of the ossicles, the stapes, is attached to the oval window of the cochlea in the inner ear; thus the vibrations of the stapes is received by the cochlea.
 
 {% include img-figure url="/MUTOR/assets/images/ossicles_model.png" description="Middle Ear Ossicles" %}
@@ -91,7 +93,8 @@ The Eustachean tube is a fluid-filled tube that connects the middle ear to the p
 # Inner Ear
 
 {% include img-figure url="/MUTOR/assets/images/innerear.png" description="Inner Ear" %}
-{% comment %} The inner ear. (image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/eari.html) {% endcomment%}
+{% comment %} The inner ear.  {% endcomment%}
+(Adapted from: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/eari.html)
 
 The inner ear is the region between the oval window and the auditory nerve. It consists of the semicircular canals and the cochlea, which includes various structures. The auditory nerve leads out of the cochlea and into the brainstem.
 
@@ -104,7 +107,7 @@ The cochlea, often referred to as the "hearing organ", is most important to the 
 The cochlea is a coiled, fluid-filled tubular structure. It is lined with membranes which divide the inside of the cochlea into fluid-filled compartments.
 
 {% include img-figure url="/MUTOR/assets/images/cochlea_dissected.png" description="Cochlea Dissected" width="400px" %}
-{% comment %} (image by Mireille Lavigne Rebillard, from http://www.cochlea.eu/en/ear/inner-ear EDU website "Journey into the World of Hearing", by Rémy Pujol et al., NeurOreille, Montpellier) {% endcomment%}
+(Image source: Mireille Lavigne Rebillard, from http://www.cochlea.eu/en/ear/inner-ear EDU website "Journey into the World of Hearing", by Rémy Pujol et al., NeurOreille, Montpellier)
 
 A dissected cochlea of a human fetus.
 
@@ -131,7 +134,8 @@ When the cochlea is excited by sound coming in, vibrations are sent through the 
 In its resting state, the basilar and tectorial membranes are parallel, the stereocilia (tiny hairs on the surface of the inner and outer hair cells) are relaxed and close together, and the ion channels between the stereocilia are closed. When sound excites the cochlea, its vibrations are sent down the fluid of the cochlea so that the basilar membrane is deflected. When the basilar membrane moves, the inner hair cells in the basilar membrane change shape, and the stereocilia on the inner hair cells are stretched, thus opening up the ion channels in the inner hair cells and causing a chemical transduction to occur within the cells. The chemical transduction of the inner hair cells results in the generation of the nerve impulse, which passes down the nerve fibers of the auditory nerve as neural firings. Thus the Organ of Corti is responsible for transducing sound signals into biological nerve impulses, so that hearing can occur.
 
 {% include img-figure url="/MUTOR/assets/images/ihc_mvnt.png" description="Inner Hair Cells" %}
-{% comment %} Close-up of inner hair cells with stereocilia, which open when excited by incoming sound. (image source: https://wellcomecollection.org/works/jfsbzy4g){% endcomment%}
+(Upper part adapted from: https://wellcomecollection.org/works/jfsbzy4g)
+{% comment %} Close-up of inner hair cells with stereocilia, which open when excited by incoming sound. {% endcomment%}
 
 {% include img-figure url="/MUTOR/assets/images/ihc_ohc.png" description="Inner and Outer Hair Cells" width="400px" %}
 {% comment %} Electron microscropy showing one row of inner hair cells and three rows of outer hair cells. {% endcomment%}
@@ -141,18 +145,21 @@ In its resting state, the basilar and tectorial membranes are parallel, the ster
 The cochlea is a coiled structure, contains the entire length of the basilar membrane. The unrolled cochlea contains the straightened basilar membrane, which is sensitive to a gradient of frequencies. The basilar membrane is tonotopically mapped, which means that different parts of the basilar membrane are optimally sensitive to a gradient of frequencies. The base of the cochlea is sensitive to low frequencies whereas the apical end is most sensitive to the highest frequencies. Tonotopic mapping begins at the basilar membrane and is preserved all the way throughout the auditory system, maintaining its structure until the level of the PrimaryAuditoryCortex.
 
 {% include img-figure url="/MUTOR/assets/images/basilar_unrolled.png" description="Basilar Membrane Unrolled" %}
-{% comment %} (image source: http://www.cs.indiana.edu/~port/teach/641/hearing.for.linguists.html) Drawing of the unrolled cochlea, showing the basilar membrane. {% endcomment %}
+(image source: http://www.cs.indiana.edu/~port/teach/641/hearing.for.linguists.html)
+{% comment %} Drawing of the unrolled cochlea, showing the basilar membrane. {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/videos/animated_basilar.gif" description="Basilar Membrane Traveling Wave Animation" width="400px" %}
-{% comment %} (image source: http://www.cs.indiana.edu/~port/teach Animation of a wave travelling down the basilar membrane.
-/641/hearing.for.linguists.html) {% endcomment %}
+{% comment %}  {% endcomment %}
+(image source: http://www.cs.indiana.edu/~port/teach/641/hearing.for.linguists.html Animation of a wave travelling down the basilar membrane.)
 {% comment %} ALSO, IT IS LOOKING HORRIBLE! {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/images/tonotopy.png" description="Tonotopy Basilar Membrane" width="400px" %}
-{% comment %} (Adapted from Watts, 1993) Schematic of the rolled-up basilar membrane, with its optimally sensitive frequencies marked along its length. {% endcomment %}
+(Adapted from Watts, 1993)
+{% comment %}  Schematic of the rolled-up basilar membrane, with its optimally sensitive frequencies marked along its length. {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/images/bekesy.png" description="Data on Tonotopy from von Békésy " width="auto" height="500px" %}
-{% comment %} (Adapted from image: http://www.pbrc.hawaii.edu/bekesy/ taken from Nobel Lectures Physiology or Medicine 1942 - 1962, Elsevier, 1964, pp. 722-746) {% endcomment %}
+(Adapted from: http://www.pbrc.hawaii.edu/bekesy/ taken from Nobel Lectures Physiology or Medicine 1942 - 1962, Elsevier, 1964, pp. 722-746)
+{% comment %}  {% endcomment %}
 
 The observation of tonotopic mapping on the basilar membrane was first made by Georg von Békésy, who won a Nobel Prize in 1961 for this discovery. This is a diagram from von Békésy's Nobel lecture, showing that higher frequencies (in cps, or cycles per second) excited the end of the basilar membrane which was closest to the stapes (stirrup). The point of optimal excitation moved further away from the stapes as the stimulus frequency decreased.
 
@@ -163,14 +170,14 @@ The brainstem and midbrain include a set of neural regions which relay the nerve
 {% include img-figure url="/MUTOR/assets/images/brainstem_anat.png" description="Brainstem Anatomy" width="auto" height="500px" %}
 
 {% include img-figure url="/MUTOR/assets/images/brainstem_diagram.png" description="Brainstem Diagram" width="400px" %}
-{% comment %} (image source: http://serous.med.buffalo.edu/hearing/ic.html) {% endcomment %}
+(Adapted from: http://serous.med.buffalo.edu/hearing/ic.html)
 {% comment %} Anatomy of the brainstem, with the auditory pathway highlighted. {% endcomment %}
 
 The auditory nerve leads out of the cochlea and into the brainstem. On the surface of the brainstem, the auditory and the vestibular nerves combine and constitute the VIIIth cranial nerve. A tumor in the VIIIth cranial nerve is called acoustic neuroma and can result in deafness.
 
 {% include img-figure url="/MUTOR/assets/images/cn8.png" description="Cranial Nerve VIII (auditory nerve in red)" width="500px" %}
-{% comment %} Cranial nerve, with the VIIIth nerve (auditory nerve) in red.
-(image source: http://www.gwc.maricopa.edu/class/bio201) {% endcomment %}
+(image source: http://www.gwc.maricopa.edu/class/bio201)
+{% comment %} Cranial nerve, with the VIIIth nerve (auditory nerve) in red. {% endcomment %}
 
 Overview of the auditory pathway from the brainstem to the cortex.
 
@@ -202,7 +209,7 @@ Jeffress (1948) proposed a model of how the auditory system computes interaural 
 {% comment %} Illustrations of the concepts of A) interaural time difference (ITD) and B) interaural level difference (ILD). {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/images/mso_coincidence1.jpg" description="A. Model of Coincidence Cetection" width="400px" %}
-{% comment %} (image source: http://www.physiology.wisc.edu A. Jeffress's (1948) model of coincidence detection. {% endcomment %}
+(image source: http://www.physiology.wisc.edu A. Jeffress's (1948) model of coincidence detection.)
 
 {% include img-figure url="/MUTOR/assets/images/mso_coincidence2.jpg" description="B. Physiological Implementation of Coincidence Detection" width="300px" %}
 {% comment %} B. Coincidence detectors for computing interaural time differences /yin/jorissmithyin98.pdf) {% endcomment %}
@@ -220,7 +227,8 @@ The lateral lemniscus is anatomically divided into the Ventral, Dorsal, and Inte
 The inferior colliculus is a collection of nuclei which receives input from the axons of the lateral lemniscus and is located in the midbrain. It operates as a site of early communication between the visual and auditory senses, as well as a feedback-providing mechanism which provides output to the cochlea.
 
 {% include img-figure url="/MUTOR/assets/images/ic.jpg" description="Inferior Colliculus" width="300px" %}
-{% comment %} (image source: http://serous.med.buffalo.edu/hearing/ic.html) Cross-section of the midbrain, with the inferior colliculi highlighted in blue. {% endcomment %}
+(image source: http://serous.med.buffalo.edu/hearing/ic.html)
+{% comment %}  Cross-section of the midbrain, with the inferior colliculi highlighted in blue. {% endcomment %}
 
 The inferior colliculus is one of the most important relay centers in the auditory system. Roles of the inferior colliculus include crossmodal communication, orienting to novel stimuli, providing efferent feedback, and detecting amplitude and frequency modulation.
 
@@ -236,7 +244,7 @@ One of the roles of the inferior colliculus, and also the inferior colliculus, s
 
 {% include img-figure url="/MUTOR/assets/images/ttremolo.png" description="Tremolo" width="300px" %}
 {% comment %} Tremolo - a case of amplitude modulation
-(image source: http://www.compositiontoday.com/sound_bank {% endcomment %}
+{% endcomment %}
 
 Amplitude modulation can also result in the interaction of two or more tones that are close together in frequency. The interaction of two tones within a critical bandwidth will be discussed in detail in the next unit.
 
@@ -249,8 +257,8 @@ The medial geniculate nucleus (MGN) is located In the thalamus, and is the last 
 The medial geniculate nucleus contains a division that is tonotopically organized. The primary function of the medial geniculate nucleus is to relay auditory impulses to the cortex.
 
 {% include img-figure url="/MUTOR/assets/images/mgn.jpg" description="Medial Geniculus Nucleus" width="400px" %}
-{% comment %} The medial geniculate nuclei, shown here in green.
-(image source: http://sylvius.com)  {% endcomment %}
+{% comment %} The medial geniculate nuclei, shown here in green.  {% endcomment %}
+(image source: http://sylvius.com)
 
 Also in the thalamus is the Lateral Geniculate Nucleus, responsible for visual capture and orienting.
 
@@ -259,12 +267,12 @@ Also in the thalamus is the Lateral Geniculate Nucleus, responsible for visual c
 The auditory cortex is located just under the sylvian fissure, which is the fold that divides the temporal lobe from the frontal and parital lobes in the brain.
 
 {% include img-figure url="/MUTOR/assets/images/audctx1-2.png" description="The Sylvian fissure, with the Auditory Cortex below it." width="500px" %}
-{% comment %} (image source: http://serous.med.buffalo.edu/hearing/auditory_cortex.html) {% endcomment %}
+(image source: http://serous.med.buffalo.edu/hearing/auditory_cortex.html)
 
 The auditory cortex includes primary and secondary auditory cortices. The PrimaryAuditoryCortex (also known as A1) is located on the temporal plane, which is delineated by the Sylvian fissure on the top surface of the temporal lobe. The SecondaryAuditoryCortex (A2) surrounds the primary auditory cortex. The primary auditory cortex is tonotopically organized, with the lateral edge of the Sylvian fissure being sensitive to lower frequencies and the medial part of the cortex being sensitive to high frequencies. The primary auditory cortex is responsible for the perception of pitch, rhythm and duration, whereas the secondary auditory cortex is responsible for pattern perception, which includes the perception of speech and melodies. Persons with lesioned auditory cortices have trouble perceiving music; this is a condition known as amusia. (Peretz et al, 2003)
 
 {% include img-figure url="/MUTOR/assets/images/a1_a2.jpg" description="Auditory Cortex" width="400px" %}
-{% comment %} (image source: http://www.utdallas.edu/~tres/integ/sen5/display9_21.html) {% endcomment %}
+(image source: http://www.utdallas.edu/~tres/integ/sen5/display9_21.html)
 
 Primary and secondary auditory cortices. A1 is shown here in blue and A2 is in red. The primary auditory cortex is tonotopically organized.
 
@@ -319,7 +327,7 @@ The ferret and chinchilla auditory systems are similar to ours in that most of t
 # Hearing Damage
 Hearing damage is very prevalent, especially among rock musicians and individuals who are continually exposed to loud sounds.
 
-Famous people suffering from hearing loss (adapted from http://www.hearnet.com/):
+Famous people suffering from hearing loss (Adapted from http://www.hearnet.com/):
                                                         {% comment %} HOW TO MAKE THIS A REAL LINK? {% endcomment %}
 
 - Barbra Streisand
@@ -411,7 +419,8 @@ Demo Normal Hearing vs. High-Frequency Hearing loss (Source: `[Handbook for Acou
 The first part of this sentence is played normally, whereas the second part is filtered so as to simulate the percept of an individual with high-frequency hearing loss.
 
 {% include img-figure url="/MUTOR/assets/images/audiogram.jpg" description="Audiogram comparason: Normal Hearing Imparment due to Loud Noise" %}
-{% comment %} An audiogram comparing normal hearing with hearing impairment due to loud noise. (image source:http://www.sfu.ca/sonic-studio/handbook/Audiogram.html) {% endcomment %}
+(image source:http://www.sfu.ca/sonic-studio/handbook/Audiogram.html)
+{% comment %} An audiogram comparing normal hearing with hearing impairment due to loud noise.  {% endcomment %}
 {% comment %} ALSO LOOKS BAD {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/images/audiogram_presby.jpg" description="Audiogram Presbyacusis or Ski-Slope Hearing" %}
@@ -435,11 +444,13 @@ Presbyacusis is the loss of hearing as a result of old age. The hearing loss qui
 
 
 {% include img-figure url="/MUTOR/assets/images/normalvsdamaged.jpg" description="Comparison Normal Hair Cell vs. Damaged Hair Cell" width="400px" %}
-{% comment %} (image source: http://www.hei.org/education/health/loss.htm) Normal versus damaged hair cells {% endcomment %}
+(image source: http://www.hei.org/education/health/loss.htm)
+{% comment %}  Normal versus damaged hair cells {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/images/audiogram_presby.jpg" description="Presbyacusis Audiogram" %}
 Presbyacusis is commonly observed as a "ski-slope" hearing loss, where "ski-slope" refers to the shape of the audiometry function, which is relatively intact at low frequencies, but falls off rapidly at high frequencies.
-{% comment %} (image source: http://www.hearinglife.com.au) {% endcomment %}
+(image source: http://www.hearinglife.com.au)
+{% comment %}  {% endcomment %}
 
 ## Mixed hearing loss
 Instead of only conductive or sensorineural hearing loss, individuals occasionally have damage in both the conductive and sensorineural parts of the auditory system.
