changed the freq of does phase matter to a multiple of the buffer size

--- a/_units/01.md
+++ b/_units/01.md
@@ -276,8 +276,8 @@ description="Two sinusoids, one with variable phase with respect to the other." 
 {% assign fixedmultname = mutor_patch_pfx | append: "fixedmult" %}
 {% assign moveablemultname = mutor_patch_pfx | append: "moveablemult" %}
 
-{% include p/oscillator name=fixedoscillatorname freq="375." type="sine" %}
-{% include p/oscillator name=moveableoscillatorname freq="375." type="sine" %}
+{% include p/oscillator name=fixedoscillatorname freq="344.53125" type="sine" %}
+{% include p/oscillator name=moveableoscillatorname freq="344.53125" type="sine" %}
 {% include p/multiply name=fixedmultname factor=".5" %}
 {% include p/multiply name=moveablemultname factor=".5" %}
 <table><tr><td style="text-align:left;">
